# personal_assistant

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml  requirements.txt
personal_notion_agent/app/: agent_factory.py
personal_notion_agent/app/prompts/: __init__.py  coordinator_instructions.py  formatter_instructions.py  interpreter_agent_instructions.py  notion_manager_instructions.py
personal_notion_agent/infrastructure/: settings.py
personal_notion_agent/models/: personal_task_model.py  work_project_model.py  work_task_model.py
personal_notion_agent/routes/: manager.py
skills/tools/: notion_tools.py
