[project]
name = "personal-notion-agent"
version = "0.1.0"
description = "Personal Notion Manager Agentic System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentops>=0.4.21",
    "agno==1.8.0",
    "fastapi[standard]>=0.116.0",
    "google-genai>=1.32.0",
    "notion-client>=2.4.0",
    "openai>=1.99.9",
    "pre-commit>=4.3.0",
    "python-telegram-bot>=22.3",
    "requests>=2.32.4",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.12",
]

[tool.setuptools.packages.find]
where = ["personal_notion_agent", "skills"]
